# rudis-cms

./: .gitignore  Cargo.toml  README.md  package.json  renovate.json
.github/workflows/: ci.yml  docs.yml  release.yml
.zed/: settings.json
docs/: book.ja.toml  book.toml
docs/src/en/: README.md  SUMMARY.md  cli.md  configuration.md  field-types.md  installation.md  quick-start.md  schema.md  sql-schema.md  storage.md
docs/src/ja/: README.md  SUMMARY.md  cli.md  configuration.md  field-types.md  installation.md  quick-start.md  schema.md  sql-schema.md  storage.md
docs/theme/: index.hbs
example/: config.toml  config.yml  test.md
integration-test/: .gitignore  config.yaml  main.test.ts  prepare.sh
integration-test/posts/: test.md
rudis-cms/: Cargo.toml
rudis-cms/src/: lib.rs  schema.rs
rudis-cms/src/job/: mod.rs
rudis-cms/src/job/sql/: builder.rs  cleanup.rs  fetch_objects.rs  upsert.rs
rudis-cms/src/job/storage/: asset.rs  mod.rs  sqlite.rs
rudis-cms/src/process_data/: error.rs
rudis-cms/src/process_data/markdown/: mod.rs
rudis-cms/src/process_data/markdown/resolver/: image.rs  link_card.rs  mod.rs
rudis-cms/src/process_data/table/: types.rs
rudis-cms/src/progress/: fancy.rs  null.rs  simple.rs
rudis-cms/src/tests/attachment/: mod.rs
rudis-cms/src/tests/attachment/posts/: post2.yaml
rudis-cms/src/tests/subtable/: config.yaml
rudis-cms/src/typescript/: valibot.rs
src/: config.rs  lib.rs  main.rs  progress.rs  record.rs  schema.rs  table.rs  warning.rs
src/backend/: debug.rs  mod.rs
src/backend/cloudflare/: d1.rs  mod.rs
src/backend/cloudflare/templates/: ddl.sql.liquid
src/cloudflare/: kv.rs  mod.rs  r2.rs
src/deploy/: asset.rs  mod.rs
src/deploy/cloudflare/: d1.rs  kv.rs  mod.rs  r2.rs
src/deploy/local/: asset.rs  d1.rs  db.rs  kv.rs  mod.rs  r2.rs  storage.rs
src/field/: config.rs  mod.rs  object_loader.rs  upload.rs
src/field/markdown/: mod.rs
src/field/markdown/compress/: mod.rs
src/field/markdown/parser/: markdown.rs  meta_parser.rs  mod.rs
src/field/markdown/resolver/: footnote.rs  image.rs  link_card.rs  mod.rs
src/field/markdown/resolver/codeblock/: mod.rs
src/field/rich_text/: mod.rs
src/field/rich_text/compress/: mod.rs
src/field/rich_text/parser/: markdown.rs  meta_parser.rs  mod.rs
src/field/rich_text/resolver/: footnote.rs  image.rs  link_card.rs  mod.rs
src/job/: cloudflrae.rs  executor.rs  filter.rs  mod.rs  multiplex.rs
src/job/sql/: builder.rs  cleanup.rs  cleanup.sql.liquid  ddl.rs  ddl.sql.liquid  drop_all_table.rs  fetch_object.sql.liquid  fetch_objects.rs  mod.rs  upsert.rs  upsert.sql.liquid
src/job/storage/: asset.rs  kv.rs  mod.rs  r2.rs  sqlite.rs
src/preprocess/: imagetool.rs  mod.rs  types.rs
src/preprocess/rich_text/: mod.rs
src/preprocess/rich_text/codeblock/: meta_parser.rs
src/preprocess/rich_text/parser/: markdown.rs  mod.rs
src/preprocess/rich_text/transform/: highlighter.rs  isolated_url.rs  mod.rs
src/process_data/: mod.rs  object_loader.rs  table.rs
src/process_data/markdown/: mod.rs  types.rs
src/process_data/markdown/compress/: mod.rs
src/process_data/markdown/parser/: markdown.rs  meta_parser.rs  mod.rs
src/process_data/markdown/resolver/: footnote.rs  image.rs  link_card.rs  mod.rs
src/process_data/markdown/resolver/codeblock/: mod.rs
src/process_data/table/: context.rs  markdown_uploader.rs  mod.rs  parse.rs  serialize.rs  transform.rs  types.rs  validate.rs
src/progress/: fancy.rs  format.rs  mod.rs  simple.rs  state.rs
src/rich_text/: mod.rs
src/rich_text/codeblock/: highlighter.rs  meta_parser.rs  mod.rs
src/rich_text/parser/: markdown.rs  mod.rs
src/sql/: mod.rs
src/sql/templates/: ddl.sql.liquid  fetch_all_hash.liquid  insert.sql.liquid  upsert.liquid
src/tests/: mod.rs
src/tests/attachment/: config.yaml
src/tests/attachment/posts/: post1.yaml
src/tests/scenario1/: config.yaml
src/tests/scenario1/mail/: flavius.yaml  gaius.yaml  sextus.yaml
src/tests/scenario1/mail/files/: fimbria.txt  galerius.txt
src/tests/subtable/: mod.rs
src/tests/subtable/post/: after.yaml  before.yaml
src/typescript/: mod.rs  rudis-valibot.ts  rudis.ts  rudis.ts.txt  table.ts.liquid  valibot.rs
treesitteract/: Cargo.toml
treesitteract/src/: lib.rs
(+3 files in other folders)
