[package]
name = "rudis-cms"
version = "0.1.12"
edition = "2024"

[dependencies]
aws-config = { version = "1.8" }
aws-sdk-s3 = { version = "1" }

anyhow = "1"
blake3 = { version = "1.8", features = ["serde"] }
blocking = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
glob = "0.3"
image = { version = "0.25", features = ["serde"] }
katex = "0.4"
liquid = "0.26"
pulldown-cmark = "0.13"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
syntect = "5"
thiserror = "2"
tracing = { version = "0.1.41", features = ["valuable", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = [
    "valuable",
    "env-filter",
] }
usvg = "0.45"
valuable = { version = "0.1.1", features = ["derive"] }
winnow = "0.7"
maplit = "1"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = { version = "2", features = ["serde"] }
scraper = "0.23"
derive-debug = "0.1"
html_parser = "0.7"
itertools = "0.14"
async-channel = "2"
num_cpus = "1"
indexmap = { version = "2", features = ["serde"] }
data-url = "0.3"
urlencoding = "2"
blurhash = "0.2"
rusqlite = {version="0.37", features = ["bundled"]}
mime_guess = "2"
mime = "0.3"
bincode = { version = "2", features = ["serde"] }
crossbeam = { version = "0.8", features = ["crossbeam-queue"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
html-escape = "0.2"
stringcase = "0.4"
base64 = "0.22"
serde_with = { version = "3.14.0", features = ["json"] }
